[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/soundtrack/Scott Holmes Music - Energy.mp3" type="AudioStream" id=1]
[ext_resource path="res://scenes/UI/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/temp_assets/buttonpressed.jpg" type="Texture" id=3]
[ext_resource path="res://assets/temp_assets/buttonnormal.png" type="Texture" id=4]
[ext_resource path="res://assets/temp_assets/buttonhover.jpg" type="Texture" id=5]
[ext_resource path="res://assets/UI_assets/logos/atrophy_logo.png" type="Texture" id=6]
[ext_resource path="res://scenes/UI/main_menu/options.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/UI/main_menu/level_select.gd" type="Script" id=9]
[ext_resource path="res://assets/UI_assets/fonts/button_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/UI_assets/themes/buttons_theme.tres" type="Theme" id=14]
[ext_resource path="res://scenes/UI/main_menu/logo_shake.gd" type="Script" id=15]

[sub_resource type="Animation" id=6]
resource_name = "timedown"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Timer:wait_time")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.05, 1.0, 0.05 ]
}

[sub_resource type="InputEventAction" id=4]
action = "pause"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="main_menu" type="Control" groups=["main_menu"]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 14 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -189.0
margin_bottom = 189.0
custom_constants/separation = 37

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/VBoxContainer2"]
margin_right = 960.0
margin_bottom = 120.0

[node name="logo_rect" type="TextureRect" parent="ColorRect/VBoxContainer2/CenterContainer2"]
margin_left = 180.0
margin_right = 780.0
margin_bottom = 120.0
rect_min_size = Vector2( 600, 120 )
texture = ExtResource( 6 )
expand = true
script = ExtResource( 15 )

[node name="Timer" type="Timer" parent="ColorRect/VBoxContainer2/CenterContainer2/logo_rect"]
wait_time = 0.05
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/VBoxContainer2/CenterContainer2/logo_rect"]
autoplay = "timedown"
anims/timedown = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/VBoxContainer2"]
margin_top = 157.0
margin_right = 960.0
margin_bottom = 378.0
rect_min_size = Vector2( 960, 221 )
custom_constants/separation = 7

[node name="CenterContainer" type="CenterContainer" parent="ColorRect/VBoxContainer2/VBoxContainer"]
margin_right = 960.0
margin_bottom = 50.0

[node name="play_button" type="Button" parent="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer"]
margin_left = 380.0
margin_right = 580.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 13 )
text = "PLAY"

[node name="CenterContainer4" type="CenterContainer" parent="ColorRect/VBoxContainer2/VBoxContainer"]
margin_top = 57.0
margin_right = 960.0
margin_bottom = 107.0

[node name="tutorial_button" type="Button" parent="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer4"]
margin_left = 380.0
margin_right = 580.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 13 )
text = "TUTORIAL"

[node name="CenterContainer2" type="CenterContainer" parent="ColorRect/VBoxContainer2/VBoxContainer"]
margin_top = 114.0
margin_right = 960.0
margin_bottom = 164.0

[node name="options_button" type="Button" parent="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer2"]
margin_left = 380.0
margin_right = 580.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 14 )
text = "OPTIONS"

[node name="CenterContainer3" type="CenterContainer" parent="ColorRect/VBoxContainer2/VBoxContainer"]
margin_top = 171.0
margin_right = 960.0
margin_bottom = 221.0

[node name="quit_button" type="Button" parent="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer3"]
margin_left = 380.0
margin_right = 580.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 14 )
text = "QUIT"

[node name="options" parent="." instance=ExtResource( 8 )]
unique_name_in_owner = true
visible = false

[node name="level_select" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 101.0
margin_top = 25.0
margin_right = -102.0
margin_bottom = -25.0
color = Color( 0.737255, 0.737255, 0.737255, 1 )
script = ExtResource( 9 )

[node name="ReferenceRect" type="ReferenceRect" parent="level_select"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_min_size = Vector2( 516, 489 )
border_color = Color( 0.462745, 0.462745, 0.462745, 1 )
border_width = 4.8
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="level_select"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="spacer" type="CenterContainer" parent="level_select/VBoxContainer"]
margin_right = 757.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="CenterContainer" type="CenterContainer" parent="level_select/VBoxContainer"]
margin_top = 14.0
margin_right = 757.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="level_select/VBoxContainer/CenterContainer"]
margin_left = 273.0
margin_top = 2.0
margin_right = 483.0
margin_bottom = 34.0
text = "LEVEL SELECT"

[node name="CenterContainer2" type="CenterContainer" parent="level_select/VBoxContainer"]
margin_top = 54.0
margin_right = 757.0
margin_bottom = 79.0
rect_min_size = Vector2( 517, 25 )

[node name="CenterContainer3" type="CenterContainer" parent="level_select/VBoxContainer"]
margin_top = 83.0
margin_right = 757.0
margin_bottom = 83.0

[node name="LevelGridContainer" type="GridContainer" parent="level_select/VBoxContainer/CenterContainer3"]
unique_name_in_owner = true
margin_left = 58.0
margin_right = 699.0
rect_min_size = Vector2( 641, -0.6 )
custom_constants/vseparation = 9
custom_constants/hseparation = 14
columns = 5

[node name="LevelTextureButton" type="TextureButton" parent="level_select"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
shortcut_in_tooltip = false
shortcut = SubResource( 5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="soundtrack" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 1 )
volume_db = -10.0
autoplay = true
bus = "Soundtrack"

[connection signal="timeout" from="ColorRect/VBoxContainer2/CenterContainer2/logo_rect/Timer" to="ColorRect/VBoxContainer2/CenterContainer2/logo_rect" method="_on_Timer_timeout"]
[connection signal="pressed" from="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer4/tutorial_button" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer2/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer2/VBoxContainer/CenterContainer3/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="level_select/LevelTextureButton" to="level_select" method="_on_LevelTextureButton_pressed"]
